emacs: Change work notes to weekly notes

--- a/dotfiles/emacs.d/share/yatemplate/01:week-.*.org
+++ b/dotfiles/emacs.d/share/yatemplate/01:week-.*.org
@@ -5,7 +5,7 @@
 
 [[!toc levels=2]]
 
-* Done
-** $0
-* Doing
-* Todo
+$0
+
+#+BEGIN: clocktable :scope file :maxlevel 2 :tstart "<`(format-time-string "%F")`>" :tend "<now>" :step day
+#+END
