emacs: Fix work week template

--- a/dotfiles/emacs.d/share/yatemplate/01:week-.*.org
+++ b/dotfiles/emacs.d/share/yatemplate/01:week-.*.org
@@ -7,5 +7,6 @@
 
 $0
 
+* Clock
 #+BEGIN: clocktable :scope file :maxlevel 2 :tstart "<`(format-time-string "%F")`>" :tend "<now>" :step day
-#+END
+#+END:
